# group_wallet_index

./: .history  CHANGELOG.md  README.md  canister_ids.json  dfx.json
.github/workflows/: production.yml
candid/: multisig_index.did  wallet_index.did
scripts/: build.sh  propose_upgrade.sh  set_data.sh
src/: Cargo.toml  lib.rs  methods.rs
src/logic/: cmc.rs  guards.rs  ledger.rs  mod.rs  proxy_notifications.rs  store.rs
src/rust_declarations/: types.rs
src/services/: cmc_service.rs  mod.rs
src/storage/: cell_api.rs  mod.rs  multisig_storage.rs  multisig_wasm_storage.rs  proxy_storage.rs  spawn_status_storage.rs  state.rs  storage_api.rs
src/types/: error.rs  mod.rs  result.rs  spawn_status.rs  wallet_data.rs
