[package]
name = "wallet_index"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[[test]]
name="generate"
path = "lib.rs"

[dependencies]
candid = "0.10.7"
ic-cdk = "0.14.0"
serde = "1.0.198"
ic-stable-structures = "0.6.4"
ic-ledger-types = "0.11.0"
