[package]
name = "wallet_index"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[[test]]
name="generate"
path = "lib.rs"

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
serde = "1"
ic-stable-structures = "0.6"
ic-ledger-types = "0.12.0"
